--- a/com.packtpub.e4.clock.ui/plugin.xml
+++ b/com.packtpub.e4.clock.ui/plugin.xml
@@ -23,6 +23,28 @@
             name="Time Zone View"
             restorable="true">
       </view>
+      <view
+            category="com.packtpub.e4.clock.ui"
+            class="com.packtpub.e4.clock.ui.views.TimeZoneTreeView"
+            icon="icons/dxhr.gif"
+            id="com.packtpub.e4.clock.ui.views.TimeZoneTreeView"
+            name="Time Zone Tree View"
+            restorable="true">
+      </view>
+      <view
+            category="com.packtpub.e4.clock.ui"
+            class="com.packtpub.e4.clock.ui.views.TimeZoneTableView"
+            icon="icons/sample.gif"
+            id="com.packtpub.e4.clock.ui.views.TimeZoneTableView"
+            name="Time Zone Table View"
+            restorable="true">
+      </view>
    </extension>
+   
+    <extension point="org.eclipse.core.runtime.adapters">
+ 		<factory adaptableType="java.util.TimeZone" class="com.packtpub.e4.clock.ui.internal.TimeZoneAdapterFactory">
+ 			<adapter type="org.eclipse.ui.views.properties.IPropertySource"/>
+ 		</factory>
+	</extension>
 
 </plugin>
