--- a/com.packtpub.e4.clock.ui/plugin.xml
+++ b/com.packtpub.e4.clock.ui/plugin.xml
@@ -41,7 +41,74 @@
       </view>
    </extension>
    
-    <extension point="org.eclipse.core.runtime.adapters">
+   <extension point="org.eclipse.ui.commands">
+ 	<command name="Hello"
+ 			description="Says Hello World"
+ 			id="com.packtpub.e4.clock.ui.command.hello"/>
+	</extension>
+	
+	<extension point="org.eclipse.ui.handlers">
+ 		<handler class= "com.packtpub.e4.clock.ui.handlers.HelloHandler"
+ 				commandId="com.packtpub.e4.clock.ui.command.hello"/>
+ 		<enabledWhen>
+ 			<reference definitionId="when.hello.is.active"/>
+ 		</enabledWhen>
+	</extension>
+   
+   <extension point="org.eclipse.ui.menus">
+	 <menuContribution allPopups="false" locationURI="menu:help?after=additions">
+	 	<command commandId="com.packtpub.e4.clock.ui.command.hello" label="Hello" style="push">
+	 		<visibleWhen>
+	 			<reference definitionId="when.hello.is.active"/>
+	 		</visibleWhen>
+	 	</command>
+	 </menuContribution>
+	</extension>
+   
+   <extension point="org.eclipse.ui.bindings">
+	 <key 
+	 	commandId="com.packtpub.e4.clock.ui.command.hello" 
+	 	sequence="M1+9"
+	 	contextId="org.eclipse.jdt.ui.javaEditorScope"
+	 	schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+	 />
+	</extension>
+	
+	<extension point="org.eclipse.core.expressions.definitions">
+	 <definition id="when.hello.is.active">
+		 <with variable="activeContexts">
+			 <iterate operator="or">
+			 	<equals value="org.eclipse.jdt.ui.javaEditorScope"/>
+			 </iterate>
+		 </with>
+	 </definition>
+	</extension>
+	
+	<extension point="org.eclipse.ui.commands">
+		<command name="Show the Time" description="Shows the Time"
+	 			 id="com.packtpub.e4.clock.ui.command.showTheTime"/>
+	</extension>
+	
+	<extension point="org.eclipse.ui.handlers">
+		<handler class="com.packtpub.e4.clock.ui.handlers.ShowTheTime"
+	 			 commandId="com.packtpub.e4.clock.ui.command.showTheTime"/>
+	</extension>
+	
+	<extension point="org.eclipse.ui.menus">
+		<menuContribution allPopups="false" locationURI="popup:org.eclipse.ui.popup.any">
+		 	<command label="Show the Time" style="push" commandId="com.packtpub.e4.clock.ui.command.showTheTime">
+			 	<visibleWhen checkEnabled="false">
+				 	<with variable="selection">
+					 	<iterate ifEmpty="false">
+					 		<adapt type="java.util.TimeZone"/>
+					 	</iterate>
+				 	</with>
+			 	</visibleWhen>
+		 	</command>
+	 	</menuContribution>
+	</extension>
+	
+	 <extension point="org.eclipse.core.runtime.adapters">
  		<factory adaptableType="java.util.TimeZone" class="com.packtpub.e4.clock.ui.internal.TimeZoneAdapterFactory">
  			<adapter type="org.eclipse.ui.views.properties.IPropertySource"/>
  		</factory>
